SCIP version NEXT
==================

fixed bugs:
- fixed assert in solve.c with branched status and LP reached the objective limit

features:
- can now output the solutions in the solution pool in the interactive shell


SCIP version 3.0.1
==================

fixed bugs:
- fixed bug when adding linear constraints with non active variables in solving process, during propagation this
  resulted in changing the row, which is not possible for unmodifiable constraints/locked rows
- fixed bug in copying nonlinear constraints during presolve (nonlinear part was not copied)
- fixed issue with deleting varbound constraints in case the bound change was not applied
- fixed small issue in pseudo objective propagator w.r.t. propagating the lower bound globally
- fixed issue with applying the effective root depth during the search
- fixed bugs in parsing dis-/conjunctive constraints
- fixed minor bug in conjunctive constraint handler printing wrong constraint
- fixed bug in disjunctive constraint handler when enforcing a constraint
- fixed bug with handling of empty logicor and bounddisjunction constraints
- fixed bug which disabled iteration limit in SCIPlpSolveAndEval()
- fixed bug in cumulative constraint handler w.r.t. getting active variables
- fixed bug concerning usage of dualbound and lowerbound
- fixed bug trying to color probing nodes, which are not added to the vbc output anymore
- fixed bug in sorting template
- fixed bug in cons_orbitope: in rare cases one cannot repropagate
- fixed behaviour change of indicator constraint handler when solving a another instance after solving a one using the
  interactive shell
- fixed bug of wrong result code in propagation in prop_genvbound.c
- fixed several issue in cumulative constraint handler
- fixed issue in cumulative constraint and separation
- fixed feasibility decision bug when replacing inactive variables by their active counterparts, which might change the